[package]

name = "twitter-api"
version = "0.2.0"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gifnksm/twitter-api-rs"
description = "Unofficial Rust library for the Twitter API."
documentation = "https://gifnksm.github.io/twitter-api-rs"

[dependencies]
oauth-client = { git = 'https://github.com/staticfox/oauth-client-rs.git', rev = '1ec7dae' }
rustc-serialize = "0.3"
